# PYNQ_Bootcamp

./: README.md
bootcamp_sessions/PYNQ 301 - Memory Game Grid Detection/: PYNQ_301-Memory_Game_Grid_Detection-LLM.ipynb  PYNQ_301-Memory_Game_Grid_Detection.ipynb  aruco-reference.html
bootcamp_sessions/PYNQ 302 - Referee Match Client/: PYNQ_302-Referee_Match_Client.ipynb  (+10 more)
client/: setup-client.sh  student-competition-guide.md
gridmind-referee/: .gitignore  Cargo.toml  README.md  demo_student_bot.py  kv260-real-hardware-demo-guide.md  manual-demo-walkthrough.md  operators-guide.md  simulate_tournament.py  student-api-reference.html  student-competition-guide.md  student-implementation-guide.md  student-rescue-modules.md  three-machine-demo-guide.md
gridmind-referee/data/: game_config.json  pools_2teams.json  pools_6teams.json  pregame_riddles.json
gridmind-referee/data/grids/: grid_1.json  grid_2.json  grid_5.json  grid_6.json  grid_8.json
gridmind-referee/src/: arena.rs  config.rs  content_pools.rs  game_state.rs  genesis_client.rs  grid.rs  hints.rs  join_listener.rs  join_registry.rs  lib.rs  main.rs  master.rs  master_messages.rs  messages.rs  p2p_client.rs  pool.rs  puzzle_answers.rs  scoreboard_state.rs  team_secrets.rs  web.rs
gridmind-referee/static/: arena.html  operator.html  scoreboard.html
server/: 6-board-3-machine-tournament-guide.md  example_pools_config.json  kv260-real-hardware-demo-guide.md  kv260_test_pools.json  manual-demo-walkthrough.md  operators-guide.md  practice-match-guide.md  setup-server.sh  three-machine-demo-guide.md
(+35 files in other folders)
